# tacky

./: Cargo.toml  README.md
.github/workflows/: bench.yml  test.yml
pbrs/: Cargo.toml  README.md
pbrs/src/: errors.rs  lib.rs  parser.rs  types.rs
src/: buf.rs  field.rs  lib.rs  scalars.rs  tack.rs  typed_writers.rs
tacky/: Cargo.toml
tacky-build/: Cargo.toml  simple_output.rs
tacky-build/src/: builder_api.rs  complex_message.proto  field_enum.rs  field_type.rs  formatter.rs  lib.rs  parser.rs  simple.rs  simple_message.proto  simple_typed.rs  witness.rs
tacky-macros/: Cargo.toml
tacky-macros/src/: lib.rs
tacky/src/: buf.rs  field.rs
testing/: Cargo.toml  build.rs
testing/benches/: benchmark.rs  comparison.rs  microbench.rs  regression.rs
testing/protos/: accesslog.proto  importing.proto  proto3_message.proto  simple_message.proto  use_case.proto
testing/src/: lib.rs  prost_to_tacky.rs  proto3.rs
