[package]
name = "tacky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["tacky-build", "testing"]


[dependencies]
bytes = "1"
prost = {version = "0.12", optional = true}

[features]
default = ["prost-compat"]
prost-compat = ["prost"]