[package]
name = "pb-rs"
version = "0.10.0"
description = "A converter from proto files into quick-protobuf compatible Rust module"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser", "quick-protobuf"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tafia/quick-protobuf"
edition = "2021"

[dependencies]
nom = "7"

[dev-dependencies]
walkdir = "2.3.1"
