[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tacky = { path = "../" }
prost = "0.12"
# quick-protobuf = "0.8.1"

[build-dependencies]
prost-build = "0.12"
# pb-rs = "0.10"
tacky-build = { path = "../tacky-build" }
