[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tacky = { path = "../" }
prost = "0.12"
[build-dependencies]
prost-build = "0.12"
tacky-build = { path = "../tacky-build" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
